[package]
name = "rag-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "json"] }
ollama-rs = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "rag-system"
path = "src/main.rs"

[[bin]]
name = "query"
path = "src/bin/query.rs"